// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS Theming E2E should render correctly 1`] = `
<Text>
  rgb(255, 255, 255)
</Text>
`;

exports[`iOS withTheme should render correctly without theme 1`] = `
<Text>
  no theme applied
</Text>
`;
